--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.1"
+    "angular": "~1.3.1",
+    "bootstrap": "~3.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.1"
